fixed layout bug; added better pgp configuration

--- a/css/material.css
+++ b/css/material.css
@@ -8532,10 +8532,12 @@ _:-ms-input-placeholder, :root .mdl-slider.mdl-slider.is-upgraded {
   width: 100%; }
 
 .mdl-tabs__tab-bar {
+    
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+    
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
   -webkit-flex-direction: row;
@@ -8555,7 +8557,10 @@ _:-ms-input-placeholder, :root .mdl-slider.mdl-slider.is-upgraded {
   height: 48px;
   padding: 0 0 0 0;
   margin: 0;
-  border-bottom: 1px solid rgb(224,224,224); }
+  border-bottom: 1px solid rgb(224,224,224);
+    
+
+}
 
 .mdl-tabs__tab {
   margin: 0;
